<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_IPAddress">Insert Server IP</string>
    <string name="edit_PortNumber">Insert Port Number</string>
    <string name="ButtonTeam1">Team1</string>
    <string name="ButtonTeam2">Team2</string>
    <string name="ButtonTeam3">Team3</string>
    <string name="ButtonTeam4">Team4</string>
    <string name="ButtonTeam5">Team5</string>
    <string name="SendServer">Send</string>
    <string name="Interval">Timer Interval</string>
    <string name="Start">Start</string>
        

</resources>
