<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/ButtonTeam5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonTeam4"
        android:layout_alignBottom="@+id/ButtonTeam4"
        android:layout_alignLeft="@+id/ButtonTeam2"
        android:onClick="connectTeam5"
        android:text="@string/ButtonTeam5" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_PortNumber"
        android:layout_alignParentBottom="true"
        android:onClick="connectToServer"
        android:text="@string/SendServer" />

    <EditText
        android:id="@+id/edit_PortNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/edit_IPAddress"
        android:ems="10"
        android:hint="@string/edit_PortNumber"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_IPAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_PortNumber"
        android:layout_toLeftOf="@+id/ButtonTeam3"
        android:ems="10"
        android:hint="@string/edit_IPAddress" />

    <Button
        android:id="@+id/ButtonTeam4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_IPAddress"
        android:layout_alignLeft="@+id/edit_IPAddress"
        android:onClick="connectTeam4"
        android:text="@string/ButtonTeam4" />

    <Button
        android:id="@+id/ButtonTeam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:onClick="connectTeam1"
        android:text="@string/ButtonTeam1" />

    <Button
        android:id="@+id/ButtonTeam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonTeam1"
        android:layout_alignBottom="@+id/ButtonTeam1"
        android:layout_centerHorizontal="true"
        android:onClick="connectTeam2"
        android:text="@string/ButtonTeam2" />

    <Button
        android:id="@+id/ButtonTeam3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/ButtonTeam2"
        android:onClick="connectTeam3"
        android:text="@string/ButtonTeam3" />

    <EditText
        android:id="@+id/coordInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/Interval"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/getCoords"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/Start"/>

</RelativeLayout>